syntax = "proto3";

package greet;

option go_package = "github.com/mateusmarquezini/grpc-go-course/greet/proto";

message GreetResponse {
  string result = 1;
}

message GreetRequest {
  string first_name = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc GreetStream (GreetRequest) returns (stream GreetResponse);
}

